# phf_mut

./: Cargo.toml  README.md
examples/: simple.rs
src/: lib.rs  tests.rs
